# xiao-c-220-examples

./: .gitignore  CMakeLists.txt  README.md  tmp.c
master/: sec001_hello_word.c  sec003_scanf.c  sec004_triop.c  sec005_char.c  sec006_sizeof.c  sec007_increase.c  sec008_for.c  sec009_forfor.c  sec010_while.c  sec011_switch.c  sec012_array.c  sec013_array_multi.c  sec14_array_max.c  tmp.c
master/sec002/: print.c  print.h  sec002_include.c
